# git-sync-backup

./: .cursorrules  .gitignore  .taplo.toml  AGENTS.md  Cargo.toml  README-en_US.md  README-zh_CN.md  README.md
.github/workflows/: release.yml  test.yaml
src/: backup.rs  cli.rs  config.rs  error.rs  git.rs  git_command.rs  lib.rs  main.rs  ops.rs  sync.rs  utils.rs  vars.rs
tests/: integration.rs
